--- a/modules/board/skins/LIFO_BOARD_EDITION/lang/lang.xml
+++ b/modules/board/skins/LIFO_BOARD_EDITION/lang/lang.xml
@@ -3,17 +3,13 @@
 	<item name="no_tags">
 		<value xml:lang="ko"><![CDATA[등록된 태그가 없습니다.]]></value>
 		<value xml:lang="en"><![CDATA[No Tags]]></value>
-  </item>
+  	</item>
 	<item name="point_delete_comment">
 		<value xml:lang="ko"><![CDATA[댓글 삭제]]></value>
 		<value xml:lang="en"><![CDATA[On Deleting Comments]]></value>
-		<value xml:lang="jp"><![CDATA[コメント削除]]></value>
-		<value xml:lang="zh-CN"><![CDATA[删除评论]]></value>
-		<value xml:lang="zh-TW"><![CDATA[刪除評論]]></value>
-		<value xml:lang="fr"><![CDATA[Supprimer un Commentaire]]></value>
-		<value xml:lang="ru"><![CDATA[При удалении комментариев]]></value>
-		<value xml:lang="es"><![CDATA[Al eliminar comentarios]]></value>
-		<value xml:lang="tr"><![CDATA[Yorum Silmeye]]></value>
-		<value xml:lang="vi"><![CDATA[Khi xóa bình luận]]></value>
+	</item>
+	<item name="cmd_view_document">
+		<value xml:lang="ko"><![CDATA[본문 보기]]></value>
+		<value xml:lang="en"><![CDATA[Document]]></value>
 	</item>
 </lang>
