--- a/modules/wiki/lang/lang.xml
+++ b/modules/wiki/lang/lang.xml
@@ -345,9 +345,9 @@
 		<value xml:lang="vi"><![CDATA[Alias:]]></value>
 	</item>
 	<item name="create_first_page_title">
-		<value xml:lang="ko"><![CDATA[XpressEngine 위키에 오신 것을 환영합니다!]]></value>
-		<value xml:lang="en"><![CDATA[Welcome to XpressEngine Wiki!]]></value>
-		<value xml:lang="zh-CN"><![CDATA[欢迎来到 XpressEngine 维基系统!]]></value>
+		<value xml:lang="ko"><![CDATA[LIFO 위키에 오신 것을 환영합니다!]]></value>
+		<value xml:lang="en"><![CDATA[Welcome to LIFO Wiki!]]></value>
+		<value xml:lang="zh-CN"><![CDATA[欢迎来到 LIFO 维基系统!]]></value>
 	</item>	
 	<item name="create_first_page_description">
 		<value xml:lang="ko"><![CDATA[생성된 문서가 없습니다. 새로운 페이지를 생성하세요.]]></value>
@@ -355,127 +355,38 @@
 		<value xml:lang="zh-CN"><![CDATA[你暂时还没有任何文章，添加第一个页面吧!]]></value>
 	</item>
 	<item name="create_first_page_markdown_help">
-		<value xml:lang="en"><![CDATA[
-You haven't created any pages yet so here's a few tips to get you started.
+		<value xml:lang="ko"><![CDATA[
+<h4 class="alert-heading">LIFO 위키란?</h4>
+<hr>
+<p>LIFO 위키 XpressEngine 위키를 개선하여 만들어진 위키엔진입니다.</p>
+<p>단순하면서도 간편한 위키엔진을 지향하고 있습니다.</p>
+<br>
+<h4 class="alert-heading">LIFO 위키 스킨</h4>
+<hr>
+<p>LIFO 위키 스킨은 Bootrap v4.3.1 을 이용하여 제작되었습니다.</p>
+<p>만약 사이트에서 Bootstrap을 이미 이용하고 계신다면 Bootstrap CDN 기능을 꺼 불필요한 요청을 막을 수 있습니다.</p>
+<br/>
+<p>이외에 LIFO 위키 스킨에서는 아래와 같은 항목을 설정할 수 있습니다.</p>
+<li>로고</li>
+<li>메뉴바 색상</li>
+<li>제목</li>
+<br>
+<h4 class="alert-heading">LIFO 위키 문법</h4>
+<hr>
+<p>LIFO 위키에서는 더 이상 위키 문법을 지원하지 않습니다.</p>
+<p>아래의 방법을 이용하여 위키 문법을 사용하세요.</p><br/>
+<p>1. CKEditor에 마크다운 플러그인을 추가하여 마크다운 문법을 사용할 수 있습니다.</p>
+<p>2. TOAST UI EDITOR를 설치하여 마크다운 문법을 사용할 수 있습니다.</p>
+<br>
+<h4 class="alert-heading">LIFO 위키 단축키</h4>
+<hr>
+<li>F(Front Gate): 대문</li>
+<li>N(New Document): 새 문서</li>
+<li>E(Edit Document): 문서 편집</li>
+<hr/>
+<p class="mb-0">이제 문서 생성을 클릭하여 위키의 대문을 만들어 보세요!</p>
 
-You should now that XpressEngine Wiki now uses [Markdown](http://daringfireball.net/projects/markdown/) as its default syntax for adding content.  
-
-### What is Markdown? 
-
-Here's how it's presented on its website:
-
-> _Markdown is a text-to-HTML conversion tool for web writers. Markdown allows you to write using an easy-to-read, easy-to-write plain text format, then convert it to structurally valid XHTML (or HTML)._
-
-But what does this mean? Let's see some examples!
-
-### Markdown in action
-
-#### Styling and headers
-
-You can write in *italics* just by surrounding you words with stars like \*this\*. Make them \*\*double\*\* and you'll get **bold**.
-
-For headings, like the one above use
-
-\# Heading 1
-
-\## Heading 2 
-
-\#\#\# Heading 3
-
-or even simpler, divide content with many dashes:
-
-     ---------------------------
-
-#### Links
-
-Just add an url directly in you content and it will be directly linked: http://www.xpressengine.org.
-
-If you also want to add a description use a bracket combination, just like on [the official website](http://daringfireball.net/projects/markdown/syntax#link).
-
-You can also link to pages inside the same wiki, but instead of using an url you have to specify the document alias - \[some description\]\(page_alias\) and you're done!
-
-### Lists
-
-\- Use a minus sign for a bullet
-
-\+ Or plus sign
-
-\* Or an asterisk
-
-
-\1. Numbered lists are easy
-
-\2. Markdown keeps track of the numbers for you
-
-\7. So this will be item 3.
-
-### More info
-
-This page was just a quick intro to get you started. For more help, take a look at:
-
-+ PHP Markdown extra - http://michelf.com/projects/php-markdown/extra/
-+ Markdown's official reference - http://daringfireball.net/projects/markdown/syntax		
-		]]></value>
-		<value xml:lang="zh-CN"><![CDATA[
-你还没有建立任何页面，这里提供一些帮助提示。
-
-XpressEngine 维基系统使用 [Markdown](http://daringfireball.net/projects/markdown/) 作为默认的语法规则来添加内容。
-
-### 什么是 Markdown? 
-
-以下是Markdown官网的描述：
-
-> _Markdown 是一个 文本-HTML 的转换工具，它允许你在写文章时使用一种易读写的文本格式，然后将其转换成标准的XHTML（或者HTML） 
-
-是什么意思呢？请看一些例子！
-
-### Markdown in action
-
-#### 样式与头部
-
-你可以使用 \* 例如 \*this\*为单词两边添加*号。使用 \*\*double\*\* 你将会得到 **double**
-
-写头部时， 可以使用以下代码
-
-\# Heading 1
-
-\## Heading 2 
-
-\#\#\# Heading 3
-
-或者更简单，使用减号即可：
-
-     ---------------------------
-
-#### 链接
-
-只要将url直接添加到内容（例如 http://www.xpressengine.org），就会被自动显示为链接。
-
-可以使用中括号为链接提供名称，例如 [the official website](http://daringfireball.net/projects/markdown/syntax#link)
-
-如果你希望链接到同一个维基的其他页面，你则需要使用页面别名， 例如 \[some description\]\(page_alias\)
-
-### 列表
-
-\- 使用减号代表圆点
-
-\+ 或者加号
-
-\* 或者星号
-
-
-\1. 有序列表非常简单
-
-\2. Markdown 会对你的列表保持跟踪
-
-\7. 此行将为3
-
-### 更多信息
-
-这个页面简单地介绍了怎样使用Markdown。请点击以下链接获得更多帮助
-
-+ PHP Markdown extra - http://michelf.com/projects/php-markdown/extra/
-+ Markdown's 官方参考 - http://daringfireball.net/projects/markdown/syntax		
+		
 		]]></value>
 	</item>
 	<item name="top_of_page">
