--- a/modules/wiki/lang/lang.xml
+++ b/modules/wiki/lang/lang.xml
@@ -91,8 +91,8 @@
 		<value xml:lang="vi"><![CDATA[Thêm vào danh bạ]]></value>
 	</item>
 	<item name="notice_old_revision">
-		<value xml:lang="ko"><![CDATA[이전 버전을 보고 계십니다]]></value>
-		<value xml:lang="en"><![CDATA[This is an old revision]]></value>
+		<value xml:lang="ko"><![CDATA[이전 버전을 보고 계십니다.]]></value>
+		<value xml:lang="en"><![CDATA[This is an old revision.]]></value>
 		<value xml:lang="jp"><![CDATA[過去のバージョンです。]]></value>
 		<value xml:lang="zh-CN"><![CDATA[此为旧版本]]></value>
 		<value xml:lang="zh-TW"><![CDATA[此為舊版本]]></value>
@@ -563,4 +563,8 @@
         <value xml:lang="en"><![CDATA[Please select status that can be selected when writing an article.]]></value>
         <value xml:lang="jp"><![CDATA[記事作成時に選択することができる状態を指定してください。]]></value>
     </item>
+	<item name="discuss">
+		<value xml:lang="ko"><![CDATA[토론]]></value>
+		<value xml:lang="en"><![CDATA[Discussion]]></value>
+	</item>
 </lang>
